checking in after improving plot appearance

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -18,7 +18,8 @@
     "import IPython\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import mjknowling"
+    "import mjknowling\n",
+    "import time"
    ]
   },
   {
@@ -82,7 +83,7 @@
     "        str_d[k].value = str(v)\n",
     "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
     "#display(w)\n",
-    "str_d['irrigation'].value = 'low'"
+    "str_d['irrigation'].value = 'high'"
    ]
   },
   {
@@ -233,6 +234,14 @@
     "    if l1w.value is not None and l2w is not None:\n",
     "        if l1w.value == \"irrigation\" and l2w.value == \"time series\":\n",
     "            p_d['plot'].value = 'irrigationtimeseries'\n",
+    "        elif l1w.value == \"infiltration\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'infiltrationts'\n",
+    "        elif l1w.value == \"evaporation\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'evaporationts'\n",
+    "        elif l1w.value == \"soil moisture\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'soilmoisturets'\n",
+    "        elif l1w.value == \"root uptake\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'rootuptakets'\n",
     "        elif l1w.value == \"costs\" and l2w.value == \"irrigation\":\n",
     "            p_d['plot'].value = 'irrigationcost'\n",
     "        elif l1w.value == \"end of season\" and l2w.value == \"yield\":\n",
@@ -244,10 +253,19 @@
     "                p_d['plot'].value = 'laitimeseries'\n",
     "            elif l2w.value == \"fruit\":\n",
     "                p_d['plot'].value = 'fruittimeseries'\n",
+    "            elif l2w.value == \"Brix\":\n",
+    "                p_d['plot'].value = 'brixtimeseries'\n",
     "        elif l1w.value == \"key dates\":\n",
+    "            #p_d['plot'].value = l2w.value\n",
     "            if l2w.value == \"bud burst\":\n",
     "                p_d['plot'].value = 'bbdate'\n",
-    "        elif l1w.value == \"costs\" and l2w.value == \"comparison\":\n",
+    "            elif l2w.value == \"first flower\":\n",
+    "                p_d['plot'].value = 'ffdate'\n",
+    "            elif l2w.value == \"veraison\":\n",
+    "                p_d['plot'].value = 'vsdate'\n",
+    "            elif l2w.value == \"harvest\":\n",
+    "                p_d['plot'].value = 'hvdate'\n",
+    "        elif l1w.value == \"costs\" and l2w.value == \"all\":\n",
     "            p_d['plot'].value = 'costcontributions'\n",
     "        elif l1w.value == \"bottom line\" and l2w.value == \"gross margin\":\n",
     "            p_d['plot'].value = 'grossmargin'\n",
@@ -264,16 +282,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d0 = {'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
+    "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season'], \n",
     "      'where my water is going' : ['irrigation', 'infiltration', 'evaporation', 'soil moisture', 'root uptake'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
-    "d1['irrigation'] = ['time series', 'total']\n",
+    "d1['irrigation'] = ['time series']\n",
+    "d1['infiltration'] = ['time series']\n",
+    "d1['evaporation'] = ['time series']\n",
+    "d1['soil moisture'] = ['time series']\n",
+    "d1['root uptake'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['growth'] = ['canopy', 'fruit']\n",
-    "d1['end of season'] = ['yield', 'Brix']\n",
+    "d1['growth'] = ['canopy', 'fruit', 'Brix']\n",
+    "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
-    "d1['costs'] = ['irrigation', 'labour', 'diesel', 'chemical', 'comparison']\n",
+    "d1['costs'] = ['irrigation', 'all']  #'labour', 'diesel', 'chemical', \n",
     "d1['bottom line'] = ['gross margin']\n",
     "\n",
     "level0_widget = Dropdown( options=list(d0.keys()),\n",
@@ -304,22 +326,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_change(change):\n",
-    "    import time\n",
+    "level0_widget.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_change1(change):\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        #plt.close()\n",
-    "        #print(\"changed to {}\".format(change['new']))\n",
-    "        clear_output()\n",
-    "        display(HBox([l_box, c_box, r_box]))\n",
-    "        #display(button)\n",
-    "        irrig = str_d['irrigation'].value\n",
-    "        #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "        scens = mjknowling.run_scen(irrig)\n",
-    "        p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
-    "        plot = p_d['plot'].value\n",
-    "        #print(\"plotting {}\".format(plot))\n",
-    "        time.sleep(.001)\n",
-    "        mjknowling.plot_scen(scens, plot)"
+    "        if \"water\" in level0_widget.value:\n",
+    "            #plt.close()\n",
+    "            #print(\"changed to {}\".format(change['new']))\n",
+    "            clear_output()\n",
+    "            display(HBox([l_box, c_box, r_box]))\n",
+    "            #display(button)\n",
+    "            irrig = str_d['irrigation'].value\n",
+    "            #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
+    "            scens = mjknowling.run_scen(irrig)\n",
+    "            p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
+    "            plot = p_d['plot'].value\n",
+    "            #print(\"plotting {}\".format(plot))\n",
+    "            time.sleep(.00001)\n",
+    "            mjknowling.plot_scen(scens, plot)\n",
+    "def on_change2(change):\n",
+    "    if change['type'] == 'change' and change['name'] == 'value':\n",
+    "        if \"water\" not in level0_widget.value:\n",
+    "            #plt.close()\n",
+    "            #print(\"changed to {}\".format(change['new']))\n",
+    "            clear_output()\n",
+    "            display(HBox([l_box, c_box, r_box]))\n",
+    "            #display(button)\n",
+    "            irrig = str_d['irrigation'].value\n",
+    "            #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
+    "            scens = mjknowling.run_scen(irrig)\n",
+    "            p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
+    "            plot = p_d['plot'].value\n",
+    "            #print(\"plotting {}\".format(plot))\n",
+    "            time.sleep(.00001)\n",
+    "            mjknowling.plot_scen(scens, plot)"
    ]
   },
   {
@@ -329,8 +376,8 @@
    "outputs": [],
    "source": [
     "#level0_widget.observe(on_change)\n",
-    "#level1_widget.observe(on_change)\n",
-    "level2_widget.observe(on_change)"
+    "level1_widget.observe(on_change1)\n",
+    "level2_widget.observe(on_change2)"
    ]
   },
   {
@@ -360,38 +407,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# display(dd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from IPython.display import clear_output\n",
-    "#def on_button_clicked(b):\n",
-    "#    clear_output()\n",
-    "#    display(button)\n",
-    "#    irrig = str_d['irrigation'].value\n",
-    "#    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "#    scens = mjknowling.run_scen(irrig)\n",
-    "#    p_d = plot_request_mapper()\n",
-    "#    plot = p_d['plot'].value\n",
-    "#    #print(\"plotting {}\".format(plot))\n",
-    "#    mjknowling.plot_scen(scens, plot)\n",
-    "#    \n",
-    "#button = ipyw.Button(description=\"Get Some Science\")\n",
-    "#button.on_click(on_button_clicked)\n",
-    "#display(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -400,112 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from IPython.display import display, clear_output\n",
-    "# import ipywidgets as ipy\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import numpy as np\n",
-    "# from ipywidgets import Dropdown, FloatText, IntSlider, Label, HBox, VBox\n",
-    "\n",
-    "# class SliderAndImage():\n",
-    "#      #def on_update_widget_level0(*args):\n",
-    "#     #    level1_widget.options = d0[level0_widget.value]\n",
-    "\n",
-    "#     #def on_update_widget_level1(*args):\n",
-    "#     #    level2_widget.options = d1[level1_widget.value]\n",
-    "        \n",
-    "#     def on_update_widget_level0(self, level0_widget, level1_widget, d0, *args):\n",
-    "#         level1_widget.options = d0[level0_widget.value]\n",
-    "\n",
-    "#     def on_update_widget_level1(self, level1_widget, level2_widget, d1, *args):\n",
-    "#         level2_widget.options = d1[level1_widget.value]\n",
-    "\n",
-    "#     def update(self, level0_widget, level1_widget, level2_widget):\n",
-    "#         with self.out:\n",
-    "#             clear_output()\n",
-    "#             irrig = str_d['irrigation'].value\n",
-    "#             scens = mjknowling.run_scen(irrig)\n",
-    "#             p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
-    "#             plot = p_d['plot'].value\n",
-    "#             fig, ax = mjknowling.plot_scen(scens, plot)\n",
-    "#             #plt.show()\n",
-    "\n",
-    "#     def make_slider_and_image(self):\n",
-    "\n",
-    "#         self.out = ipy.Output()  #layout=ipy.Layout(width='200px', height='200px'))\n",
-    "\n",
-    "#         #slider = ipy.IntSlider(min = 0, max = 10, orientation = 'vertical')\n",
-    "#         d0 = {'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
-    "#                   'where my water is going' : ['irrigation', 'soil moisture', 'transpiration'],\n",
-    "#                   'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
-    "#         d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level at a time - to avoid multi-index hassle\n",
-    "#         d1['irrigation'] = ['time series', 'total']\n",
-    "#         d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "#         d1['growth'] = ['canopy', 'berry']\n",
-    "#         d1['end of season'] = ['yield', 'Brix']\n",
-    "#         d1['revenue'] = ['crush']\n",
-    "#         d1['costs'] = ['irrigation', 'labour', 'diesel', 'chemical', 'comparison']\n",
-    "#         d1['bottom line'] = ['gross margin']\n",
-    "    \n",
-    "        \n",
-    "#         level0_widget = Dropdown( options=list(d0.keys()),\n",
-    "#                                  value='how my vine is developing',\n",
-    "#                                  description='',\n",
-    "#                                )\n",
-    "#         level1_widget = Dropdown( options=d0['how my vine is developing'],\n",
-    "#                                  value='growth',\n",
-    "#                                  description='',\n",
-    "#                                )\n",
-    "#         level2_widget = Dropdown( options=d1['growth'],\n",
-    "#                                  value='berry',\n",
-    "#                                  description='',\n",
-    "#                                )\n",
-    "               \n",
-    "#         #level0_widget.observe(on_update_widget_level0, 'value')\n",
-    "#         #level1_widget.observe(on_update_widget_level1, 'value')\n",
-    "#         level0_widget.observe(self.on_update_widget_level0(level0_widget=level0_widget, \n",
-    "#                                                            level1_widget=level1_widget, d0=d0), 'value')\n",
-    "#         level1_widget.observe(self.on_update_widget_level1(level1_widget=level1_widget, \n",
-    "#                                                            level2_widget=level2_widget, d1=d1), 'value')\n",
-    "        \n",
-    "#         print(level0_widget.value, level1_widget.value, level2_widget.value)\n",
-    "#         widget = ipy.interactive(self.update(level0_widget=level0_widget, \n",
-    "#                                              level1_widget=level1_widget, level2_widget=level2_widget))\n",
-    "\n",
-    "#         #layout = ipy.Layout(\n",
-    "#         #     display = 'flex',\n",
-    "#         #                    flex_flow = 'row',\n",
-    "#         #                    justify_content = 'space-between',\n",
-    "#         #                    align_items = 'center',\n",
-    "#         #                   )\n",
-    "#         widgets = ipy.HBox(children=(level0_widget, level1_widget, level2_widget, self.out))#,layout = layout)\n",
-    "        \n",
-    "#         #print(level0_widget.value, level1_widget.value, level2_widget.value)\n",
-    "        \n",
-    "#         #print(widgets)\n",
-    "#         return widgets, level0_widget, level1_widget, level2_widget\n",
-    "\n",
-    "\n",
-    "# #print(level0_widget.value, level1_widget.value, level2_widget.value)\n",
-    "# children=[]\n",
-    "# widgets = SliderAndImage()\n",
-    "# children.append(widgets.make_slider_and_image()[0])\n",
-    "# #print(widgets.make_slider_and_image()[1])\n",
-    "# display(ipy.HBox(children))"
-   ]
   },
   {
    "cell_type": "code",
