fix menu nest conditional

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -232,8 +232,11 @@
     "    plot_str = ipyw.Text(\"0.5\")\n",
     "    p_d = {\"plot\": plot_str}\n",
     "    if l1w.value is not None and l2w is not None:\n",
-    "        if l1w.value == \"irrigation\" and l2w.value == \"time series\":\n",
-    "            p_d['plot'].value = 'irrigationtimeseries'\n",
+    "        if l1w.value == \"irrigation\":\n",
+    "            if l2w.value == \"time series\":\n",
+    "                p_d['plot'].value = 'irrigationtimeseries'\n",
+    "            elif l2w.value == \"total\":\n",
+    "                p_d['plot'].value = 'irrigationtotal'\n",
     "        elif l1w.value == \"infiltration\" and l2w.value == \"time series\":\n",
     "            p_d['plot'].value = 'infiltrationts'\n",
     "        elif l1w.value == \"evaporation\" and l2w.value == \"time series\":\n",
@@ -286,7 +289,7 @@
     "      'where my water is going' : ['irrigation', 'infiltration', 'evaporation', 'soil moisture', 'root uptake'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
-    "d1['irrigation'] = ['time series']\n",
+    "d1['irrigation'] = ['time series', 'total']\n",
     "d1['infiltration'] = ['time series']\n",
     "d1['evaporation'] = ['time series']\n",
     "d1['soil moisture'] = ['time series']\n",
@@ -326,47 +329,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "level0_widget.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def on_change1(change):\n",
+    "    #print(change)\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        if \"water\" in level0_widget.value:\n",
-    "            #plt.close()\n",
-    "            #print(\"changed to {}\".format(change['new']))\n",
-    "            clear_output()\n",
-    "            display(HBox([l_box, c_box, r_box]))\n",
-    "            #display(button)\n",
-    "            irrig = str_d['irrigation'].value\n",
-    "            #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "            scens = mjknowling.run_scen(irrig)\n",
-    "            p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
-    "            plot = p_d['plot'].value\n",
-    "            #print(\"plotting {}\".format(plot))\n",
-    "            time.sleep(.00001)\n",
-    "            mjknowling.plot_scen(scens, plot)\n",
+    "        if \"water\" in level0_widget.value and (\"irrigation\" not in level1_widget.value or \n",
+    "                                              (\"irrigation\" in level1_widget.value and (\n",
+    "                                               change['old'] is not None and \"irrigation\" not in change['old']))):\n",
+    "            on_change(change)\n",
+    "\n",
     "def on_change2(change):\n",
+    "    #print(change['old'])\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        if \"water\" not in level0_widget.value:\n",
-    "            #plt.close()\n",
-    "            #print(\"changed to {}\".format(change['new']))\n",
-    "            clear_output()\n",
-    "            display(HBox([l_box, c_box, r_box]))\n",
-    "            #display(button)\n",
-    "            irrig = str_d['irrigation'].value\n",
-    "            #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "            scens = mjknowling.run_scen(irrig)\n",
-    "            p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
-    "            plot = p_d['plot'].value\n",
-    "            #print(\"plotting {}\".format(plot))\n",
-    "            time.sleep(.00001)\n",
-    "            mjknowling.plot_scen(scens, plot)"
+    "        if \"water\" not in level0_widget.value or (\"water\" in level0_widget.value \n",
+    "                                                  and \"irrigation\" in level1_widget.value):\n",
+    "            on_change(change)\n",
+    "            \n",
+    "def on_change(change):\n",
+    "    #plt.close()\n",
+    "    #print(\"changed to {}\".format(change['new']))\n",
+    "    clear_output()\n",
+    "    display(HBox([l_box, c_box, r_box]))\n",
+    "    #display(button)\n",
+    "    irrig = str_d['irrigation'].value\n",
+    "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
+    "    scens = mjknowling.run_scen(irrig)\n",
+    "    p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
+    "    plot = p_d['plot'].value\n",
+    "    #print(\"plotting {}\".format(plot))\n",
+    "    time.sleep(.00001)\n",
+    "    mjknowling.plot_scen(scens, plot)"
    ]
   },
   {
@@ -375,7 +366,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#level0_widget.observe(on_change)\n",
     "level1_widget.observe(on_change1)\n",
     "level2_widget.observe(on_change2)"
    ]
