menus and plot funcs more or less complete

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -83,7 +83,7 @@
     "        str_d[k].value = str(v)\n",
     "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
     "#display(w)\n",
-    "str_d['irrigation'].value = 'high'"
+    "str_d['irrigation'].value = 'low'"
    ]
   },
   {
@@ -268,7 +268,7 @@
     "                p_d['plot'].value = 'vsdate'\n",
     "            elif l2w.value == \"harvest\":\n",
     "                p_d['plot'].value = 'hvdate'\n",
-    "        elif l1w.value == \"costs\" and l2w.value == \"all\":\n",
+    "        elif l1w.value == \"costs\" and l2w.value == \"total\":\n",
     "            p_d['plot'].value = 'costcontributions'\n",
     "        elif l1w.value == \"bottom line\" and l2w.value == \"gross margin\":\n",
     "            p_d['plot'].value = 'grossmargin'\n",
@@ -298,7 +298,7 @@
     "d1['growth'] = ['canopy', 'fruit', 'Brix']\n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
-    "d1['costs'] = ['irrigation', 'all']  #'labour', 'diesel', 'chemical', \n",
+    "d1['costs'] = ['irrigation', 'total']  #'labour', 'diesel', 'chemical', \n",
     "d1['bottom line'] = ['gross margin']\n",
     "\n",
     "level0_widget = Dropdown( options=list(d0.keys()),\n",
