--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -32,8 +32,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### MyVineyard"
    ]
@@ -59,7 +61,7 @@
     "#entitl_widget = HBox([Label('entitl. (ML)'), entitl_widget])\n",
     "left_box = VBox([variety_widget, ])#entitl_widget])\n",
     "right_box = VBox([rootstock_widget])\n",
-    "HBox([left_box, right_box])"
+    "#HBox([left_box, right_box])"
    ]
   },
   {
@@ -75,15 +77,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "irrig_scen = [\"low\", \"high\"]\n",
+    "irrig_scen = [\"high\", \"low\"]\n",
     "irrig_str = ipyw.Text(\"0.5\")\n",
     "str_d = {\"irrigation\": irrig_str}\n",
     "def set_irrig(**kwargs):\n",
     "    for k, v in kwargs.items():\n",
     "        str_d[k].value = str(v)\n",
     "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
-    "#display(w)\n",
-    "str_d['irrigation'].value = 'low'"
+    "display(w)\n",
+    "#str_d['irrigation'].value = 'low'"
    ]
   },
   {
@@ -330,15 +332,19 @@
    "outputs": [],
    "source": [
     "def on_change1(change):\n",
-    "    #print(change)\n",
+    "    not_in_l = d0['how my vine is developing'] + d0['what my financial position is']\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
+    "        # TODO: tidy\n",
     "        if \"water\" in level0_widget.value and (\"irrigation\" not in level1_widget.value or \n",
     "                                              (\"irrigation\" in level1_widget.value and (\n",
-    "                                               change['old'] is not None and \"irrigation\" not in change['old']))):\n",
+    "                                               change['old'] is not None and \"irrigation\" not in change['old']\n",
+    "                                               and \"revenue\" not in change['old'] and \"costs\" not in change['old']\n",
+    "                                               and \"bottom line\" not in change['old'] and \"growth\" not in change['old']\n",
+    "                                               and \"key dates\" not in change['old'] \n",
+    "                                               and \"end of season\" not in change['old']))):\n",
     "            on_change(change)\n",
     "\n",
     "def on_change2(change):\n",
-    "    #print(change['old'])\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
     "        if \"water\" not in level0_widget.value or (\"water\" in level0_widget.value \n",
     "                                                  and \"irrigation\" in level1_widget.value):\n",
@@ -373,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "print('I want to know...')\n",
