--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "irrig_scen = [\"high\", \"low\"]\n",
+    "irrig_scen = [\"low\", \"high\"]\n",
     "irrig_str = ipyw.Text(\"0.5\")\n",
     "str_d = {\"irrigation\": irrig_str}\n",
     "def set_irrig(**kwargs):\n",
@@ -379,12 +379,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('I want to know...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "print('I want to know...')\n",
     "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
     "display(HBox([l_box, c_box, r_box]))"
    ]
