--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -32,12 +32,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### MyVineyard"
+    "### My Vineyard"
    ]
   },
   {
@@ -68,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MyManagementScenarios"
+    "### Management Scenarios"
    ]
   },
   {
@@ -133,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MyAssessment"
+    "### Seasonal projections"
    ]
   },
   {
@@ -288,8 +286,9 @@
    "outputs": [],
    "source": [
     "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season'], \n",
-    "      'where my water is going' : ['irrigation', 'infiltration', 'evaporation', 'soil moisture', 'root uptake'],\n",
+    "      'where my water is going' : ['irrigation', 'soil moisture', 'root uptake'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
+    "#'infiltration', 'evaporation', \n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
     "d1['infiltration'] = ['time series']\n",
