higher irrigation sensitivity

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -286,9 +286,9 @@
    "outputs": [],
    "source": [
     "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season'], \n",
-    "      'where my water is going' : ['irrigation', 'soil moisture', 'root uptake'],\n",
+    "      'where my water is going' : ['irrigation', 'soil moisture', ],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
-    "#'infiltration', 'evaporation', \n",
+    "#'infiltration', 'evaporation', 'root uptake'\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
     "d1['infiltration'] = ['time series']\n",
