--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -59,7 +59,7 @@
     "#entitl_widget = HBox([Label('entitl. (ML)'), entitl_widget])\n",
     "left_box = VBox([variety_widget, ])#entitl_widget])\n",
     "right_box = VBox([rootstock_widget])\n",
-    "#HBox([left_box, right_box])"
+    "HBox([left_box, right_box])"
    ]
   },
   {
