check in after plumbing json scen file for dash interface

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -19,7 +19,8 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import mjknowling\n",
-    "import time"
+    "import time\n",
+    "import shutil"
    ]
   },
   {
@@ -59,7 +60,7 @@
     "#entitl_widget = HBox([Label('entitl. (ML)'), entitl_widget])\n",
     "left_box = VBox([variety_widget, ])#entitl_widget])\n",
     "right_box = VBox([rootstock_widget])\n",
-    "HBox([left_box, right_box])"
+    "#HBox([left_box, right_box])"
    ]
   },
   {
@@ -92,14 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scenario selector\n",
-    "#print('ScenarioSelector...')\n",
-    "#print('Scenarios found...')\n",
-    "#base_scen_chk = ipyw.Checkbox(value=True, description='base', disabled=False, indent=False)\n",
-    "#low_scen_chk = ipyw.Checkbox(value=False, description='low', disabled=False, indent=False)\n",
-    "#high_scen_chk = ipyw.Checkbox(value=False, description='high', disabled=False, indent=False)\n",
-    "#l_box, c_box, r_box = VBox([base_scen_chk]), VBox([low_scen_chk]), VBox([high_scen_chk])\n",
-    "#HBox([l_box, c_box, r_box])"
+    "#scen_names = pd.read_json(os.path.join(\"test_json.json\")).keys().tolist()\n",
+    "scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
+    "scen_names"
    ]
   },
   {
@@ -108,14 +104,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loop programmatically over found\n",
-    "#scenarios = []\n",
-    "#if base_scen_chk.value:\n",
-    " #   scenarios.append('base')\n",
-    "#if low_scen_chk.value:\n",
-    " #   scenarios.append('low')\n",
-    "#if high_scen_chk.value:\n",
-    " #   scenarios.append('high')"
+    "# scenario selector\n",
+    "#print('ScenarioSelector...')\n",
+    "#print('Scenarios found...')\n",
+    "scen0_chk = ipyw.Checkbox(value=True, description=scen_names[0], disabled=False, indent=False)\n",
+    "scen1_chk = ipyw.Checkbox(value=False, description=scen_names[1], disabled=False, indent=False)\n",
+    "scen2_chk = ipyw.Checkbox(value=False, description=scen_names[2], disabled=False, indent=False)\n",
+    "l_box, c_box, r_box = VBox([scen0_chk]), VBox([scen1_chk]), VBox([scen2_chk])\n",
+    "HBox([l_box, c_box, r_box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel_scens = []\n",
+    "if scen0_chk.value:\n",
+    "    sel_scens.append(scen0_chk.description)\n",
+    "if scen1_chk.value:\n",
+    "    sel_scens.append(scen1_chk.description)\n",
+    "if scen2_chk.value:\n",
+    "    sel_scens.append(scen2_chk.description)\n",
+    "sel_scens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_scen_json(scen_json_fname):\n",
+    "    mapper = {\"Crush Price\": \"grape_price\", \n",
+    "              \"Maximum irrigation mm per phenology\": \"IRSTAGECAP\"}\n",
+    "    d = {}\n",
+    "    js = pd.read_json(os.path.join(scen_json_fname))\n",
+    "    js = js[js.keys()[0]]  # there is only one scen per file\n",
+    "    for k, v in js.items():\n",
+    "        if k != \"Description\":\n",
+    "            d[mapper[k]] = v[\"Value\"]\n",
+    "            #if \"irr\" in k:\n",
+    "             #   print(k)\n",
+    "              #  d[mapper[k]][\"Value\"] = v[\"Value\"]\n",
+    "               # d[mapper[k]][\"vinelogic_file\"] = \"RuleBasedIrrigation.json\"\n",
+    "            #else:\n",
+    "             #   d[mapper[k]] = v[\"Value\"]\n",
+    "    #   sorted()\n",
+    "    #for js in js.unique():\n",
+    "    #update\n",
+    "    #write\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scen_json_to_vinelogic(d, ws):\n",
+    "    for k, v in d.items():\n",
+    "        if k == \"IRSTAGECAP\":\n",
+    "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            if isinstance(v, float):\n",
+    "                print(\"uniform max irr mm: {}\".format(v))\n",
+    "                df = pd.read_json(os.path.join(ws, f))\n",
+    "                print(df[\"IRSTAGECAP\"][\"Value\"])\n",
+    "                od = df[\"IRSTAGECAP\"][\"Value\"]\n",
+    "                df[\"IRSTAGECAP\"][\"Value\"] = [v for x in od]\n",
+    "                print(df[\"IRSTAGECAP\"][\"Value\"])\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            elif isinstance(v, list) and len(v) == 5:\n",
+    "                print(\"max irr mm per phen: {}\".format(v))\n",
+    "                raise Exception\n",
+    "            else:\n",
+    "                raise Exception"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_d = \"_base\"\n",
+    "scen_d = {}\n",
+    "for s in sel_scens:\n",
+    "    # cp ws\n",
+    "    if os.path.exists(s):\n",
+    "        shutil.rmtree(s)\n",
+    "    #if not os.path.exists(sel_scens):\n",
+    "     #   os.mkdir(sel_scens)\n",
+    "    shutil.copytree(base_d, s)\n",
+    "    \n",
+    "    sjf = s + \".json\"\n",
+    "    d = process_scen_json(scen_json_fname=sjf)\n",
+    "    print(d)\n",
+    "    scen_d[s] = d\n",
+    "    print(scen_d)\n",
+    "    \n",
+    "    scen_json_to_vinelogic(d=d, ws=s)\n",
+    "    \n",
+    "    \n",
+    "#TODO\n",
+    "#scen_d = mjknowling.process_scen_json()\n",
+    "#TODO"
    ]
   },
   {
@@ -125,6 +220,15 @@
    "outputs": [],
    "source": [
     "#print('Scenario labeler and saver (and model runner) here...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scen_d"
    ]
   },
   {
@@ -141,85 +245,6 @@
    "outputs": [],
    "source": [
     "from IPython.display import clear_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def updates(level1_widget, level2_widget):\n",
-    " #   clear_output()\n",
-    "    #display(button)\n",
-    "    \n",
-    "    #l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
-    "    #display(HBox([l_box, c_box, r_box]))\n",
-    "    \n",
-    "  #  irrig = str_d['irrigation'].value\n",
-    "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "   # scens = mjknowling.run_scen(irrig)\n",
-    "    #p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
-    "    #plot = p_d['plot'].value\n",
-    "    #print(\"plotting {}\".format(plot))\n",
-    "    #mjknowling.plot_scen(scens, plot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from ipywidgets import interactive\n",
-    "#from IPython.display import display\n",
-    "#def f(a, b):\n",
-    " #   display(a + b)\n",
-    " #   return a+b\n",
-    "\n",
-    "#d = interactive(f, a=10, b=20)\n",
-    "#d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from ipywidgets import interactive\n",
-    "#dd = interactive(updates(level1_widget, level2_widget))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#w = Dropdown(\n",
-    "#    options=['grossmargin', 'harvestrevenue'],\n",
-    "#    value='grossmargin',\n",
-    "#    description='',\n",
-    "#)\n",
-    "#p = Dropdown(\n",
-    "#    options=['frog', 'fluff'],\n",
-    "#    value='frog',\n",
-    "#    description='',\n",
-    "#)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# w.observe(on_change)\n",
-    "# p.observe(on_change)\n",
-    "\n",
-    "#display(w)\n",
-    "#display(p)"
    ]
   },
   {
@@ -357,12 +382,15 @@
     "    #display(button)\n",
     "    irrig = str_d['irrigation'].value\n",
     "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "    scens = mjknowling.run_scen(irrig)\n",
+    "    \n",
+    "    # TODO: drop irrig scen\n",
+    "    scens = mjknowling.run_scen(irrig, scen_d=scen_d)\n",
+    "    \n",
     "    p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
     "    plot = p_d['plot'].value\n",
     "    #print(\"plotting {}\".format(plot))\n",
     "    time.sleep(.00001)\n",
-    "    mjknowling.plot_scen(scens, plot)"
+    "    mjknowling.plot_scen(scens, plot, scen_d=scen_d)"
    ]
   },
   {
@@ -387,6 +415,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## TODO: run model when save scens - for greater efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -406,13 +443,6 @@
     "# display(level1_widget)\n",
     "# display(level2_widget)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
